tests/models/struct/unnamed/u32/fail/default.rs
use dade::model;
#[model]
struct TestModel (
   #[field(default = 1.0)]
    u32
);
fn main() {}
